--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 BlogGeneration/models/
 BlogGeneration/venv/
-Langchain_first_learning/CelebritySearch/myenv
-Langchain_first_learning/CelebritySearch/constants.py
+CelebritySearch/myenv
+CelebritySearch/constants.py
+PromptEngineering/venv
+Chatbot/venv
+Chatbot/.env
