Remove constants.py and migrate to env_constant.py
Readme and Search.py is updated accordingly

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ BlogGeneration/models/
 BlogGeneration/venv/
 CelebritySearch/myenv
 CelebritySearch/constants.py
+CelebritySearch/env_constants.py
 PromptEngineering/venv
 Chatbot/venv
 Chatbot/.env
